# jackmaster

./: .gitignore  .travis.yml  Makefile.am  README  README.md  TODO  ac_cfg.h.in  autogen.sh  config.h  configure.ac  configure.in  jackmaster.desktop
src/: Makefile.am  alsa_if.c  alsa_if.h  configfile.c  configfile.h  gtkhelper.c  gtkhelper.h  gtkmeter.c  gtkmeter.h  gui.c  gui.h  jack_engine.c  jack_engine.h  jack_if.c  jack_if.h  jack_inserver.c  jack_process.c  jack_process.h  jm_if_t.h  main.c  main.h  testloop.c
